--- a/examples/staart/deploy-aci.yml
+++ b/examples/staart/deploy-aci.yml
@@ -5,7 +5,8 @@ variables:
 
 steps:
 - script: |
-    docker build -t $(dockerId).azurecr.io/$(startProxyImageName) .
+    echo 'build starting!'
+    docker build -t $(dockerId).azurecr.io/$(startProxyImageName):v1 .
     docker login -u $(dockerId) -p $(pswd) $(dockerId).azurecr.io
     docker push $(dockerId).azurecr.io/$(startProxyImageName)
   env:
