--- a/examples/staart/deploy-aci.yml
+++ b/examples/staart/deploy-aci.yml
@@ -9,6 +9,7 @@ steps:
     docker build -t $(dockerId).azurecr.io/$(startProxyImageName) .
     docker login -u staart -p ENScgkUYL4bR+abTrtXCpvYGThJvtZ76 staart.azurecr.io
     # docker login -u $(dockerId) -p $(pswd) $(dockerId).azurecr.io
-    docker push $(dockerId).azurecr.io/$(startProxyImageName)
+    docker push staart.azurecr.io/staart_proxy
+    # docker push $(dockerId).azurecr.io/$(startProxyImageName)
   env:
     pswd: $(dockerPassword)        # Define dockerPassword in the Variables tab of this pipeline in Pipelines page of web interface
