--- a/examples/staart/deploy-aci.yml
+++ b/examples/staart/deploy-aci.yml
@@ -7,6 +7,7 @@ steps:
 - script: |
     echo 'build starting!'
     cd examples/staart
+    echo pwd
     docker build -t $(dockerId).azurecr.io/$(startProxyImageName) .
     docker login -u staart -p ENScgkUYL4bR+abTrtXCpvYGThJvtZ76 staart.azurecr.io
     # docker login -u $(dockerId) -p $(pswd) $(dockerId).azurecr.io
