--- a/examples/staart/deploy-aci.yml
+++ b/examples/staart/deploy-aci.yml
@@ -7,7 +7,7 @@ steps:
 - script: |
     echo 'build starting!'
     cd examples/staart
-    echo pwd
+    echo $(pwd)
     docker build -t $(dockerId).azurecr.io/$(startProxyImageName) .
     docker login -u staart -p ENScgkUYL4bR+abTrtXCpvYGThJvtZ76 staart.azurecr.io
     # docker login -u $(dockerId) -p $(pswd) $(dockerId).azurecr.io
@@ -15,3 +15,8 @@ steps:
     # docker push $(dockerId).azurecr.io/$(startProxyImageName)
   env:
     pswd: $(dockerPassword)        # Define dockerPassword in the Variables tab of this pipeline in Pipelines page of web interface
+- script: |
+    # docker-compose -f docs/docker-compose.yml --project-directory . -p docs up -d
+    docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --build -d
+    docker wait docs_sut_1
+    docker-compose -f docs/docker-compose.yml --project-directory . down
