--- a/examples/staart/deploy-aci.yml
+++ b/examples/staart/deploy-aci.yml
@@ -6,14 +6,12 @@ variables:
 steps:
 - script: |
     echo 'build starting!'
-    docker build -t $(dockerId).azurecr.io/$(startProxyImageName) .
-    docker login -u staart -p ENScgkUYL4bR+abTrtXCpvYGThJvtZ76 staart.azurecr.io
-    # docker login -u $(dockerId) -p $(pswd) $(dockerId).azurecr.io
-    docker push staart.azurecr.io/staart_proxy
-    # docker push $(dockerId).azurecr.io/$(startProxyImageName)
+    docker build -f proxy/Dockerfile -t $(dockerId).azurecr.io/$(startProxyImageName) .
+    docker login -u staart -p ENScgkUYL4bR+abTrtXCpvYGThJvtZ76 staart.azurecr.io # docker login -u $(dockerId) -p $(pswd) $(dockerId).azurecr.io
+    docker push staart.azurecr.io/staart_proxy # docker push $(dockerId).azurecr.io/$(startProxyImageName)
     docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --build -d
     docker wait docs_sut_1
-    docker-compose -f docs/docker-compose.yml --project-directory . down
+    docker-compose -f docker-compose.yml --project-directory . down
   env:
     pswd: $(dockerPassword)        # Define dockerPassword in the Variables tab of this pipeline in Pipelines page of web interface
   workingDirectory: examples/staart
