--- a/examples/staart/deploy-aci.yml
+++ b/examples/staart/deploy-aci.yml
@@ -3,13 +3,16 @@ variables:
   startProxyImageName: staart_proxy  # Replace with the name of the image you want to publish
 
 steps:
-- task: DockerCompose@0
-  displayName: Build services
-  inputs:
-    action: Build services
-    azureSubscriptionEndpoint: https://github.com/Ponyboi/staart.git
-    azureContainerRegistry: staart
-    dockerComposeFile: docker-compose.yml
-    projectName: $(Build.Repository.Name)
-    qualifyImageNames: true
-    additionalImageTags: $(Build.BuildId)
+- script: |
+    echo 'build starting!'
+    docker build -f proxy/Dockerfile -t $(dockerId).azurecr.io/$(startProxyImageName) .
+    docker login -u staart -p ENScgkUYL4bR+abTrtXCpvYGThJvtZ76 staart.azurecr.io 
+    docker push staart.azurecr.io/staart_proxy
+    
+    docker-compose -f docker-compose.yml -f docker-compose.prod.yml up --build -d
+    docker wait docs_sut_1
+    docker-compose -f docker-compose.yml --project-directory . down
+  env:
+    pswd: $(dockerPassword)
+  workingDirectory: examples/staart
+  
